[build-system]
requires = [
    "setuptools>=44",
    "wheel",
    "setuptools_scm[toml]>=5.0,<6.1"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.pytest.ini_options]
# show extra info on xfailed, xpassed, and skipped tests
addopts = "--disable-pytest-warnings -rxs"
testpaths = ["tests"]
# logging settings identical to the defaults of gemseo.api.configure_logger()
log_file_level = "INFO"
log_file_date_format = "%H:%M:%S"
log_file_format = "%(levelname)8s - %(asctime)s: %(message)s"
# filterwarnings = ignore::pytest.PytestExperimentalApiWarning

[tool.black]
target-version = ['py36']
