[metadata]
name = gemseo-pymoo
author = Francois Gallard
author_email = contact@gemseo.org
url = https://www.irt-saintexupery.com
description = A GEMSEO wrapper for pymoo optimization algorithms.
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    =src
packages = find:
include_package_data = True
python_requires = >=3.6, <3.10
install_requires =
    pymoo >= 0.5.0
    gemseo >=3.2.1

[options.packages.find]
where = src

[options.extras_require]
# dependencies for testing
test =
    # This constraint is required for the current version of commitizen,
    # remove it for the next update.
    packaging <21
    pytest
    pytest-cov
    pytest-xdist


[options.entry_points]
gemseo_plugins =
    gemseo-pymoo = gemseo_pymoo


# tools settings

[tool:pytest]
testpaths = tests
addopts =
    --disable-pytest-warnings
     # show extra info on xfailed, xpassed, and skipped tests
    -rxs

[coverage:run]
branch = True
source = gemseo_pymoo

[coverage:report]
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == .__main__.:
    plt.show()
    pylab.plt.show()

[flake8]
# See http://www.pydocstyle.org/en/latest/error_codes.html for more details.
# https://github.com/PyCQA/flake8-bugbear#how-to-enable-opinionated-warnings
ignore =
    E501
    # no docstring for standard and private methods
    D105
    E203
    W503
select = B,C,D,E,F,G,N,T,W,B950
# settings for compatibility with black, see
# https://github.com/psf/black/blob/master/docs/compatible_configs.md#flake8
# https://black.readthedocs.io/en/stable/the_black_code_style.html?highlight=bugbear#line-length
max-line-length = 88
docstring-convention = google
per-file-ignores =
    tests/*.py:D100
